# codex

./: .codespellignore  AGENTS.md  BUILD.bazel  ISSUES.md  PLAN.md  justfile  workspace_root_test_launcher.bat.tpl
.github/scripts/: run-bazel-ci.sh  test_verify_feature_specs.py  verify_feature_specs.py
.github/workflows/: bazel.yml  cargo-deny.yml  ci.yml  codespell.yml  rust-ci-full.yml  rust-ci.yml  sdk.yml  v8-canary.yml
codex-rs/: Cargo.toml  deny.toml
codex-rs/.cargo/: audit.toml
codex-rs/agent-identity/src/: lib.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  facts.rs  reducer.rs
codex-rs/ansi-escape/: Cargo.toml
codex-rs/ansi-escape/src/: lib.rs
codex-rs/ansi-escape/tests/: osc_sequences.rs
codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  command_exec.rs  config_api.rs  config_manager.rs  filters.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  outgoing_message.rs  plugin_runtime.rs  prompt_policy.rs  repo_ci_learning_instruction.rs  request_processors.rs  thread_state.rs  tool_invocation_policy.rs  transport.rs
codex-rs/artifactory/: BUILD.bazel  Cargo.toml
codex-rs/artifactory/src/: keys.rs  lib.rs  schema.rs  store.rs  workflow_tool_registration.rs
codex-rs/builtin-mcps/src/: lib.rs
codex-rs/chatgpt/src/: connectors.rs
codex-rs/cicd-artifacts/: BUILD.bazel  Cargo.toml
codex-rs/cicd-artifacts/src/: lib.rs  run.rs  store.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: account_list.rs  account_refresh.rs  account_usage.rs  api_catalog_cmd.rs  debug_sandbox.rs  doctor.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  native_workflow_cmd.rs  repo_ci_exec.rs  repo_ci_learn.rs  workflow_cmd.rs  workflow_quality_hook_cmd.rs
codex-rs/cli/tests/: account.rs  account_pool__account.rs  marketplace_upgrade.rs  mcp_list.rs  native_workflow.rs  update.rs  workflow.rs  workflow_progress.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode/src/: lib.rs  runtime_stub.rs  service_stub.rs
codex-rs/codex-api/src/: api_bridge.rs  error.rs  lib.rs
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: connection_manager.rs  connection_manager_tests.rs  lib.rs  rmcp_client.rs  runtime.rs
codex-rs/collaboration-mode-templates/src/: lib.rs
codex-rs/collaboration-mode-templates/templates/: workflow.md
codex-rs/config/: Cargo.toml
codex-rs/config/src/: config_requirements.rs  config_toml.rs  lib.rs  mcp_edit.rs  mcp_edit_tests.rs  mcp_types.rs  mcp_types_tests.rs  profile_toml.rs  schema.rs  thread_config.rs  types.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  config.schema.json
codex-rs/core-plugins/: Cargo.toml
codex-rs/debug-client/: Cargo.toml
codex-rs/development-cycle/: BUILD.bazel  Cargo.toml
codex-rs/development-cycle/src/: agents.rs  execution.rs  experiment.rs  input.rs  lib.rs  models.rs  output.rs  persistence.rs  pipeline.rs  pipeline_tests.rs  review_split.rs  review_split_tests.rs  review_stage.rs  review_types.rs  split_persistence.rs  work_size.rs
codex-rs/docs/: codex_mcp_interface.md
codex-rs/e2e-tests/: BUILD.bazel  Cargo.toml
codex-rs/e2e-tests/src/: lib.rs
codex-rs/e2e-tests/tests/: model_router_live_e2e.rs  workflow_self_e2e.rs
codex-rs/exec-output-compaction/: BUILD.bazel  Cargo.toml
codex-rs/exec-output-compaction/src/: learned.rs  lib.rs  lib_tests.rs
codex-rs/execpolicy-legacy/: Cargo.toml
codex-rs/feature-specs/: README.md  TEMPLATE.md  account-pool.md  mcp.md  plugins.md  skills.md  workflows.md
codex-rs/model-router/: BUILD.bazel  Cargo.toml
codex-rs/model-router/src/: lib.rs  policy.rs
codex-rs/native-workflow/: BUILD.bazel  Cargo.toml
codex-rs/repo-ci/: BUILD.bazel  Cargo.toml
codex-rs/repo-ci/plugin/.agents/plugins/: marketplace.json
codex-rs/repo-ci/plugin/repo-ci/.codex-plugin/: plugin.json
codex-rs/repo-ci/plugin/repo-ci/commands/: commands.json
codex-rs/repo-ci/plugin/repo-ci/config/: default.json  schema.json
codex-rs/repo-ci/plugin/repo-ci/hooks/: hooks.json
codex-rs/repo-ci/src/: artifactory.rs  branch_diff.rs  ci_artifacts.rs  inference.rs  learning_hints.rs  lib.rs  persisted_runs.rs  persisted_runs_tests.rs  plan_guardrail.rs  remote_commit.rs  remote_workflow.rs  repo_ci_ai_learning.rs  resource_monitor.rs  runner.rs  storage.rs  workflow_history.rs
codex-rs/responses-api-proxy/: README.md
codex-rs/rollout-trace/: Cargo.toml
codex-rs/state/: Cargo.toml
codex-rs/tools/: BUILD.bazel  Cargo.toml
codex-rs/tui/: BUILD.bazel  Cargo.toml  codex_guide.md
codex-rs/v8-poc/: Cargo.toml
codex-rs/workflows/: BUILD.bazel  Cargo.toml
codex-rs/workflows/examples/rune_sdk/: README.md  approvals.rn  dynamic_tool.rn  namespaces.rn  quickstart.rn  streaming.rn
codex-rs/workflows/src/: api_contract.rs  command.rs  command_completion.rs  context.rs  execute.rs  id.rs  input_adapter.rs  lib.rs  managed_bun.rs  native.rs  publication.rs  quality_hook.rs  registry.rs  repair_mode.rs  rune_agent.rs  rune_api.rs  rune_app_server.rs  rune_event_sink.rs  rune_input.rs  rune_runtime.rs  rune_tool.rs  runtime_progress.rs  spec.rs  staging.rs  validation.rs  validation_finding.rs  validation_package.rs  validation_runner.rs  workflow_api.rs  workflow_client_generation.rs  workflow_contract_smoke.rs  workflow_contract_validation.rs  workflow_host.rs  workflow_runtime.rs
codex-rs/workflows/src/repair/: message.rs  mod.rs  tests.rs  types.rs
codex-rs/workflows/src/repair/tests/: schema_and_docs.rs
docs/: config.md  contributing.md  install.md  tui-chat-composer.md  user-facing-features-report.md
scripts/: stage_npm_packages.py  workflow_self_implementation_e2e.sh  workflow_self_implementation_e2e_common.sh  workflow_self_implementation_mock_api.py  workflow_self_implementation_real_world_e2e.sh
sdk/typescript/: README.md  package.json  tsup.config.ts
(+987 files in other folders)
