[package]
edition.workspace = true
license.workspace = true
name = "codex-artifactory"
version.workspace = true

[lib]
doctest = false
name = "codex_artifactory"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
