[package]
edition.workspace = true
license.workspace = true
name = "codex-artifactory"
version.workspace = true

[lib]
doctest = false
name = "codex_artifactory"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
