[package]
edition.workspace = true
license.workspace = true
name = "codex-cicd-artifacts"
version.workspace = true

[lib]
doctest = false
name = "codex_cicd_artifacts"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-artifactory = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
