[package]
name = "codex-backend-openapi-models"
version = "0.125.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "codex_backend_openapi_models"
path = "src/lib.rs"

[lints]
workspace = true

# Important: generated code often violates our workspace lints.
# Allow unwrap/expect in this crate so the workspace builds cleanly
# after models are regenerated.
# Lint overrides are applied in src/lib.rs via crate attributes

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

[package.metadata.cargo-shear]
ignored = ["serde_with"]
