[package]
name = "codex-debug-client"
version = "0.125.0"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codex-app-server-protocol = { path = "../app-server-protocol" }
serde = "1"
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1.4.1"
