[package]
edition.workspace = true
license.workspace = true
name = "codex-e2e-tests"
publish = false
version.workspace = true

[lib]
doctest = false
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
codex-config = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-model-router = { workspace = true }
codex-protocol = { workspace = true }
codex-state = { workspace = true }
codex-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
toml = { workspace = true }
walkdir = { workspace = true }
