[package]
edition.workspace = true
license.workspace = true
name = "codex-exec-output-compaction"
version.workspace = true

[lints]
workspace = true

[dependencies]
codex-utils-output-truncation = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
