[package]
name = "codex-execpolicy-legacy"
version = "0.125.0"
edition = "2024"
license = "Apache-2.0"
description = "Legacy exec policy engine for validating proposed exec calls."

[[bin]]
name = "codex-execpolicy-legacy"
path = "src/main.rs"

[lib]
name = "codex_execpolicy_legacy"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
allocative = "0.3.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["display"] }
env_logger = "0.11.9"
log = "0.4"
multimap = "0.10.0"
path-absolutize = "3.1.1"
regex-lite = "0.1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.17", features = ["macros"] }
starlark = "0.13.0"

[dev-dependencies]
tempfile = "3.23.0"
