[package]
name = "codex-model-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-config = { workspace = true }
codex-protocol = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
