[package]
edition.workspace = true
license.workspace = true
name = "codex-repo-ci"
version.workspace = true

[lib]
doctest = false
name = "codex_repo_ci"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
